lab1/Test/L1-A-10-33.output
Error Type A at Line 25
Error Type B at Line 40
Error Type B at Line 57
Error Type B at Line 59
Error Type B at Line 72
Error Type B at Line 75
